--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
 	"license": "MIT License",
 	"scripts": {
 		"test": "echo Error: no test specified"
+	},
+	"dependencies": {
+		"gulp": "^4.0.2"
 	}
 }
