--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
 		"test": "echo Error: no test specified"
 	},
 	"dependencies": {
-		"gulp": "^4.0.2"
+		"browser-sync": "^2.29.1",
+		"gulp": "^4.0.2",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-rename": "^2.0.0",
+		"gulp-sourcemaps": "^3.0.0"
+	},
+	"devDependencies": {
+		"gulp-sass": "^5.1.0",
+		"sass": "^1.62.1"
 	}
 }
