--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"browser-sync": "^2.29.1",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^8.0.0",
+		"gulp-plumber": "^1.2.1",
 		"gulp-rename": "^2.0.0",
 		"gulp-sourcemaps": "^3.0.0"
 	},
